...
                android:useDefaultMargins="true">

                <CheckBox
                    android:id="@+id/checkHappy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Happy" />

                <CheckBox
                    android:id="@+id/checkSad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sad" />
...
