...
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Existing RecyclerView (same ID) -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- New ProgressBar -->
        <ProgressBar
            android:id="@+id/progressLoading"
...
